# rex

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  trace
.github/workflows/: rust.yml
rex/: Cargo.toml
rex-ast/: Cargo.toml
rex-ast/src/: ast.rs  expr.rs  id.rs  lib.rs  macros.rs  pattern.rs  span.rs  types.rs
rex-engine/: Cargo.toml  mod.rs  trace.rs  value.rs
rex-engine/src/: apply.rs  codec.rs  context.rs  engine.rs  error.rs  eval.rs  ftable.rs  lib.rs  macros.rs  program.rs  stats.rs  util.rs  value.rs
rex-engine/src/legacy/: error.rs  lib.rs  value.rs
rex-hmts/: Cargo.toml
rex-hmts/src/: lib.rs
rex-lexer/: Cargo.toml
rex-lexer/src/: lib.rs  macros.rs  span.rs
rex-macros/: Cargo.toml
rex-macros/src/: lib.rs
rex-object/: Cargo.toml
rex-object/src/: lib.rs  object.rs
rex-parser/: Cargo.toml
rex-parser/src/: error.rs  lexer.rs  lib.rs  op.rs
rex-proc-macro/: Cargo.toml
rex-proc-macro/src/: lib.rs
rex-resolver/: Cargo.toml  resolver.rs
rex-resolver/src/: error.rs  lib.rs
rex-type-system/: Cargo.toml
rex-type-system/src/: constraint.rs  error.rs  expr.rs  lib.rs  macros.rs  trace.rs  types.rs  unify.rs
rex-type-wrappers/: Cargo.toml
rex-type-wrappers/src/: lib.rs  wrapper_regex.rs
rex/src/: json.rs  lib.rs  main.rs
rex/tests/: adt.rs  arithmetic.rex  benchmarks.rs  derive.rs  derive_codec.rs  errmsg.rs  interf.rex  json.rs  lists.rs  polymorphism.rs  rand.rex  subtraction.rex
src/: engine.rs  hmts.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  span.rs  var.rs
src/engine/: error.rs  intrinsic.rs  mod.rs  trace.rs  value.rs
src/lexer/: mod.rs  span.rs  token.rs
src/parser/: mod.rs
typeclasses/: Cargo.toml  README.md
typeclasses/haskell/: Assump.hs  Kind.hs  Main.hs  Makefile  PPrint.hs  Pred.hs  Scheme.hs  Subst.hs  TIMain.hs  TIMonad.hs  Testbed.hs  Type.hs  TypingHaskellInHaskell.hs  Unify.hs
typeclasses/src/: classes.rs  debug.rs  error.rs  expr.rs  extras.rs  helpers.rs  inference.rs  kind.rs  lib.rs  subst.rs  types.rs  util.rs
