[workspace]
resolver = "2"
members = [
    "rex",
    "rex-ast",
    "rex-engine",
    "rex-macros",
    "rex-object",
    "rex-parser",
    "rex-resolver",
]

[workspace.dependencies]
async-graphql = { version = "7.0" }
async-recursion = { version = "1.1" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tar = { version = "0.4" }
tempfile = { version = "3.10" }
thiserror = { version = "1.0" }
tokio = { version = "1.27.0" }
uuid = { version = "1.7" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
zstd = { version = "0.13.1" }
