[workspace]
resolver = "2"
members = ["rex", "rex-ast", "rex-engine", "rex-type-system", "rex-lexer", "rex-parser", "rex-proc-macro"]

[workspace.dependencies]
# External dependencies
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
regex = "1"
rpds = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

# Internal dependencies
rex-ast = { path = "rex-ast" }
rex-engine = { path = "rex-engine" }
rex-lexer = { path = "rex-lexer" }
rex-parser = { path = "rex-parser" }
rex-proc-macro = { path = "rex-proc-macro" }
rex-type-system = { path = "rex-type-system" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
