[package]
name = "rex-ast"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
rex-lexer = { workspace = true }
rpds = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["serde", "v4"] }
