[package]
name = "rex-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = { version = "1.1" }
futures = { version = "0.3" }
rex-ast = { path = "../rex-ast" }
rex-lexer = { path = "../rex-lexer" }
rex-parser = { path = "../rex-parser" }
rex-resolver = { path = "../rex-resolver" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["macros", "rt"] }
rpds = { version = "1.1" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rstats = { version = "2.1", optional = true }
eval-metrics = { version = "1.0", optional = true }

[features]
default = ["serde", "stats"]
serde = ["dep:serde_json", "dep:serde", "rpds/serde"]
stats = ["dep:rstats", "dep:eval-metrics"]
