[package]
name = "rex-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = { version = "1.1" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
rand = { version = "0.9" }
rex-ast = { path = "../rex-ast" }
rex-lexer = { path = "../rex-lexer" }
rex-parser = { path = "../rex-parser" }
rex-type-system = { path = "../rex-type-system" }
rpds = { version = "1.1" }
thiserror = { version = "1.0" }
tokio = { version = "1.27.0", features = ["macros", "rt", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4.40"
uuid = { version = "1.7", features = ["serde", "v4"] }
regex = "1"