[package]
name = "rex-engine"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rex-ast = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
rex-type-system = { workspace = true }
rpds = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
regex = { workspace = true }
