[package]
name = "rex-type-system"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
rand = "0.8.5"
rex-ast = { path = "../rex-ast" }
rex-lexer = { path = "../rex-lexer" }
rpds = { version = "1.1" }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
uuid = { version = "1.7", features = ["v4"] }
