[package]
name = "rex-type-system"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
rand = { workspace = true }
rex-ast = { workspace = true }
rex-lexer = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
