[package]
name = "rex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
chrono = "0.4.40"
clap = { version = "4.5", features = ["derive"] }
rex-ast = { path = "../rex-ast" }
rex-engine = { path = "../rex-engine" }
rex-lexer = { path = "../rex-lexer" }
rex-parser = { path = "../rex-parser" }
rex-proc-macro = { path = "../rex-proc-macro" }
rex-type-system = { path = "../rex-type-system" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.27.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
